# agents

./: .env.example  .gitignore  README.md  pyproject.toml
projects/chatbot/: README.md
projects/chatbot/backend/: README.md  pyproject.toml
projects/chatbot/backend/src/: main.py
projects/chatbot/backend/src/agents/: chat_agent.py
projects/chatbot/backend/src/tasks/: __init__.py  chat_tasks.py
projects/chatbot/frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
projects/chatbot/frontend/.next/: trace
projects/chatbot/frontend/.next/cache/: .rscinfo
projects/chatbot/frontend/.next/cache/webpack/client-development/: index.pack.gz.old
projects/chatbot/frontend/.next/cache/webpack/server-development/: index.pack.gz.old
projects/chatbot/frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
projects/chatbot/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
projects/chatbot/frontend/.next/server/vendor-chunks/: @swc.js  next.js
projects/chatbot/frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
projects/chatbot/frontend/.next/static/chunks/app/: page.js
projects/chatbot/frontend/.next/static/webpack/: webpack.5fa9154d090a5da6.hot-update.js
projects/chatbot/frontend/.next/types/app/: layout.ts  page.ts
projects/chatbot/frontend/src/app/: layout.tsx  page.tsx
projects/chatbot/frontend/src/components/: chat.tsx
projects/crewai/: README.md  pyproject.toml
projects/crewai/db/c9d3cad0-8b66-4e91-acfb-267da476cb9b/: index_metadata.pickle
projects/crewai/output/drafts/: History_of_Artificial_Intelligence_in_USA.md
projects/crewai/src/: main.py  playground.ipynb
projects/crewai/src/config/: agents_and_tasks.yaml  combined_protein.csv  mass_spec_agents_and_tasks.yaml
(+1 files in other folders)
